# VisionGuard-AI-Construction-Site-Safety-Intelligence

./: .gitignore  CONTRIBUTING.md  README.md
secureops-backend/: .gitignore  README.md  alembic.ini  debug_report.py  env.example  fix_db.py  helmet.yaml  inspect_data.py  inspect_db.py  machinery.yaml  pyproject.toml  requirements.txt  vest.yaml
secureops-backend/alembic_migrations/: env.py
secureops-backend/configs/: base.yaml  dev.yaml  prod.yaml  zones.yaml
secureops-backend/scripts/: apply_metrics_schema.py  apply_ppe_schema.py  apply_proximity_schema.py  apply_zone_schema.py  auto_label_zones.py  cleanup.py  convert_to_yolo_format.py  download_videos.py  download_yolo_model.py  extract_frames.py  generate_safety_report.py  generate_zone_report.py  generate_zones.py  prepare_zone_data.py  run_sql.py  run_zone_validation.py  seed_db.py  simulate_full_pipeline.py  test_context_logic.py  test_helmet_model.py  test_machinery_model.py  test_ppe_escalation.py  test_ppe_rules.py  test_proximity_persistence.py  test_unified_ppe.py  test_unified_proximity.py  test_vest_model.py  test_zone_logic.py  train_helmet_vest.py  train_machinery_model.py  train_model.py  train_ppe_model.sh  train_vest_model.py  validate_trained_model.py  verify_video.py
secureops-backend/src/: __init__.py  main.py  worker.py
secureops-backend/tests/: api_functional_test.py  test_agent_orchestration.py  test_document_pipeline.py  test_proximity_logic.py  test_safety_severity.py  test_tracking.py  test_video_pipeline.py  test_zone_logic.py  thunder_collection_secureops.json  verify_api_startup.py  (+2 more)
(+90 files in other folders)
